added fb authentication, at least partially

--- a/politiburo/templates/home/index.html
+++ b/politiburo/templates/home/index.html
@@ -18,6 +18,7 @@
     <![endif]-->
   </head>
   <body>
+    login with <a href="{% url "socialauth_begin" "facebook" %}">Facebook</a>
     <div class="container">
       <div class="demo-headline">
         <h1 class="demo-logo">
