--- a/politiburo/templates/base/base.html
+++ b/politiburo/templates/base/base.html
@@ -1,72 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  
   <head>
     <meta charset="utf-8">
-    <title>Flat UI</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %} {% endblock %}</title>
 
-    <!-- Loading Bootstrap -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Loading Flat UI -->
-    <link href="/static/css/flat-ui.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-    <![endif]-->
+    {% include 'base/css.html' %}
   </head>
+
   <body>
 
-    {% block header %}
-        
+    {% block content %}
     {% endblock %}
 
-    <div class="container">
-      <div class="demo-headline">
-        <h1 class="demo-logo">
-          <div class="logo"></div>
-          Grammer Commrade 
-          <small>Keeping Publishers in Check.</small>
-        </h1>
-      </div> <!-- /demo-headline -->
+    {% include 'base/js.html' %}
 
-      {% block content %}
-
-      {% endblock %}
-
-    </div> <!-- /container -->
-
-    <footer>
-      {% block footer %}
-        
-      {% endblock %}
-    </footer>
-
-    <!-- Load JS here for greater good =============================-->
-    <script src="/static/js/jquery-1.8.2.min.js"></script>
-    <script src="/static/js/jquery-ui-1.10.0.custom.min.js"></script>
-    <script src="/static/js/jquery.dropkick-1.0.0.js"></script>
-    <script src="/static/js/custom_checkbox_and_radio.js"></script>
-    <script src="/static/js/custom_radio.js"></script>
-    <script src="/static/js/jquery.tagsinput.js"></script>
-    <script src="/static/js/bootstrap-tooltip.js"></script>
-    <script src="/static/js/jquery.placeholder.js"></script>
-    <script src="/static/js/application.js"></script>
-    <!--[if lt IE 8]>
-      <script src="js/icon-font-ie7.js"></script>
-      <script src="js/icon-font-ie7-24.js"></script>
-    <![endif]-->
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try{
-        var pageTracker = _gat._getTracker("UA-19972760-2");
-        pageTracker._trackPageview();
-        } catch(err) {}
-    </script>
   </body>
 </html>
